tests/org.eclipse.php.core.tests/workspace/errors/php72/objectType01.pdtt
--TEST--
Test object pseudo type
--FILE--
<?php
function fill(array $data, object $object): object
{}
--EXPECT--